@@ -66,23 +66,15 @@ init|=
 operator|-
 literal|5339942931435878094L
 decl_stmt|;
-specifier|private
-specifier|final
-specifier|static
-name|IdGenerationMarker
-name|INSTANCE
-init|=
-operator|new
-name|IdGenerationMarker
-argument_list|()
-decl_stmt|;
 specifier|static
 name|IdGenerationMarker
 name|marker
 parameter_list|()
 block|{
 return|return
-name|INSTANCE
+operator|new
+name|IdGenerationMarker
+argument_list|()
 return|;
 block|}
 specifier|private
