@@ -155,6 +155,24 @@ argument_list|,
 name|effectiveOpId2
 argument_list|)
 expr_stmt|;
+name|assertNotEquals
+argument_list|(
+name|id1
+operator|.
+name|getReplacementIdMap
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"pk"
+argument_list|)
+argument_list|,
+name|IdGenerationMarker
+operator|.
+name|marker
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
